添加用户管理/退出系统功能，优化导航栏
