# lib/db/api.js
@@ -380,4 +380,27 @@ dbapi.findAllUser = function() {
   return db.run(r.table('users'))
 }
 
+dbapi.getUsersList = function(){
+    return db.run(r.table('users').orderBy(r.desc('createdAt')))
+}
+
+dbapi.deleteUserByEmail = function(email){
+  return db.run(r.table('users').get(email).delete())
+}
+dbapi.getUserByEmail = function(email){
+  return db.run(r.table('users').get(email))
+}
+dbapi.insertUser = function(name, email, password, ip) {
+  return db.run(r.table('users').insert({
+    name: name,
+    email: email,
+    password: password,
+    ip: ip,
+    group: wireutil.makePrivateChannel(),
+    lastLoggedInAt: r.now(),
+    createdAt: r.now(),
+    forwards: [],
+    settings: {}
+  }))
+}
 module.exports = dbapi
